文件存储服务修改